--- a/node/deploy/jscss/blog.css
+++ b/node/deploy/jscss/blog.css
@@ -145,8 +145,8 @@ h6,
   margin-bottom: 4rem;
 }
 .blog-post-title {
-  margin-bottom: 0;
-  font-size: 2.4rem;
+  margin-bottom: .25rem;
+  font-size: 2.5rem;
 }
 .blog-post-meta {
   margin-bottom: 1.25rem;
